# elements-of-computing

./: README.md  pyproject.toml
06/: symbol_less_assembler.py
assembler/: assembler.py
tests/: hack_assembler.py  test_assembler.py
tests/data/: MaxL.asm
