[tool.poetry]
name = "elements-of-computing"
version = "0.1.0"
description = "Elements of Computing Project"

[tool.poetry.dependencies]
python = "^3.8"

pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
mypy = "^0"
pylint = "^2.5.3"
pytest = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
